src/xml_serialization/array_scan.cpp
/* Generated by re2c 0.11.0 on Thu Jan 15 13:12:17 2009 */
#include "array_scan.h"

ArrayTokenType array_scan(const char*& p)
{
char* q = 0;
#define	YYCTYPE		char
#define	YYCURSOR	p
#define	YYLIMIT		p
#define	YYMARKER	q
#define	YYFILL(n)	0

{
	YYCTYPE yych;

	if((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	switch(yych) {
	case 0x00:	goto yy13;
	case 0x09:
	case 0x0B:
	case 0x0C:
	case ' ':
	case 'h':	goto yy8;
	case 0x0A:	goto yy11;
	case 0x0D:	goto yy10;
	case ',':	goto yy6;
	case '[':	goto yy2;
	case ']':	goto yy4;
	default:	goto yy15;
	}
yy2:
	++YYCURSOR;
	{return ArrayTokenType_LEFT_SQUARE_BRACKET;}
yy4:
	++YYCURSOR;
	{return ArrayTokenType_RIGHT_SQUARE_BRACKET;}
yy6:
	++YYCURSOR;
	{return ArrayTokenType_COMMA;}
yy8:
	++YYCURSOR;
	switch((yych = *YYCURSOR)) {
	case 0x09:
	case 0x0B:
	case 0x0C:
	case 0x0D:
	case ' ':
	case 'h':	goto yy21;
	case ',':
	case '[':
	case ']':	goto yy9;
	default:	goto yy17;
	}
yy9:
	{return ArrayTokenType_SPACE;}
yy10:
	yych = *++YYCURSOR;
	switch(yych) {
	case 0x09:
	case 0x0B:
	case 0x0C:
	case ' ':
	case 'h':	goto yy21;
	case 0x0A:	goto yy19;
	case 0x0D:	goto yy23;
	case ',':
	case '[':
	case ']':	goto yy9;
	default:	goto yy17;
	}
yy11:
	++YYCURSOR;
	switch((yych = *YYCURSOR)) {
	case 0x0A:
	case 0x0D:	goto yy19;
	case ',':
	case '[':
	case ']':	goto yy12;
	default:	goto yy17;
	}
yy12:
	{return ArrayTokenType_EOF;}
yy13:
	++YYCURSOR;
	switch((yych = *YYCURSOR)) {
	case ',':
	case '[':
	case ']':	goto yy14;
	default:	goto yy17;
	}
yy14:
	{return ArrayTokenType_EOL;}
yy15:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy18;
yy16:
	{return ArrayTokenType_VALUE;}
yy17:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy18:
	switch(yych) {
	case ',':
	case '[':
	case ']':	goto yy16;
	default:	goto yy17;
	}
yy19:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch(yych) {
	case 0x0A:
	case 0x0D:	goto yy19;
	case ',':
	case '[':
	case ']':	goto yy12;
	default:	goto yy17;
	}
yy21:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch(yych) {
	case 0x09:
	case 0x0B:
	case 0x0C:
	case 0x0D:
	case ' ':
	case 'h':	goto yy21;
	case ',':
	case '[':
	case ']':	goto yy9;
	default:	goto yy17;
	}
yy23:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch(yych) {
	case 0x09:
	case 0x0B:
	case 0x0C:
	case ' ':
	case 'h':	goto yy21;
	case 0x0A:	goto yy19;
	case 0x0D:	goto yy23;
	case ',':
	case '[':
	case ']':	goto yy9;
	default:	goto yy17;
	}
}

}

